--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -45,3 +45,8 @@ header > h1{
     color: white;
     background-color: rgb(16, 138, 0);
 }
+input, select{  
+    border-radius: 5px;
+    border: 2px solid rgb(16, 138, 0);
+
+}
